fixed background contrast

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -8,7 +8,7 @@ body.body--light {
     background-attachment: fixed;
     background-position: bottom;    
     background-color: $primary;
-    background-image: url('../statics/blonde.jpg');
+    background-image: url('../statics/blonde2.jpg');
     
 }
 
